--- a/index.html
+++ b/index.html
@@ -24,38 +24,38 @@
         </div>
         <form class="row g-3">
             <div class="col-md-4">
-                <label for="validationDefault01" class="form-label">Card #</label>
-                <input type="number" class="form-control" id="validationDefault01" value="Mark" required
+                <label for="formcard" class="form-label">Card #</label>
+                <input type="number" class="form-control" id="formcard" value="" required
                     placeholder="xxxxxxxxxx">
             </div>
             <div class="col-md-4">
-                <label for="validationDefault02" class="form-label">#CVC</label>
-                <input type="num" class="form-control" id="validationDefault02" value="" required
-                    placeholder="xxxxxxxxxx">
+                <label for="formcvc" class="form-label">#CVC</label>
+                <input type="text" class="form-control" id="formcvc" value="" required
+                    placeholder="0000">
             </div>
             <div class="col-md-4">
-                <label for="validationDefaultUsername" class="form-label">Amount</label>
+                <label for="form-amout" class="form-label">Amount</label>
                 <div class="input-group">
                     <span id="inputGroupPrepend2"><b>$&nbsp;</b></span>
-                    <input type="number" class="form-control" id="validationDefaultUsername"
+                    <input type="number" class="form-control" id="for-amount"
                         aria-describedby="inputGroupPrepend2" placeholder="Amount">
                 </div>
             </div>
             <div class="col-md-6">
-                <label for="validationDefault03" class="form-label">First name</label>
-                <input type="text" class="form-control" id="validationDefault03">
+                <label for="formname" class="form-label">First name</label>
+                <input type="text" class="form-control" id="formname">
             </div>
             <div class="col-md-6">
-                <label for="validationDefault03" class="form-label">Last name</label>
-                <input type="text" class="form-control" id="validationDefault03">
+                <label for="formlast" class="form-label">Last name</label>
+                <input type="text" class="form-control" id="formlast">
             </div>
             <div class="col-md-6">
-                <label for="validationDefault03" class="form-label">City</label>
-                <input type="text" class="form-control" id="validationDefault03">
+                <label for="formcity" class="form-label">City</label>
+                <input type="text" class="form-control" id="formcity">
             </div>
             <div class="col-md-3">
-                <label for="validationDefault04" class="form-label">State</label>
-                <select class="form-select" id="validationDefault04" required>
+                <label for="formstate" class="form-label">State</label>
+                <select class="form-select" id="formstate" required>
                     <option selected disabled value="">Pick a State</option>
                     <option>Madrid
                     </option>
@@ -64,8 +64,8 @@
             </div>
 
             <div class="col-md-3">
-                <label for="validationDefault05" class="form-label">Postal Code</label>
-                <input type="text" class="form-control" id="validationDefault05" required>
+                <label for="formpostal" class="form-label">Postal Code</label>
+                <input type="text" class="form-control" id="formpostal" required>
             </div>
             <div class="row mt-3">
                 <div class="col-6"> We accept:</div>
